--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </section>
 
     <!-- COURSES ADMIN PANEL -->
-    <section id="java-courses" class="panel">
-      <h2>Manage Java Courses</h2>
+<section id="java-courses" class="panel" style="display: block !important;">      
+  <h2>Manage Java Courses</h2>
 
       <div class="form">
         <input id="courseDurationJava" placeholder="Total Duration">
